- leaderboard 3 opsi (WFO, WFOProyek, WFH) - new api 'https://absensi.hutamakarya.com/api/leaderboardByWorkLocation/ASC/10?date=2023-02-28' - fix all padding to class="ion-padding" - fix all no-padding to class="ion-no-padding" - fix all margin to class="ion-margin" - fix all no-margin to class="ion-no-margin"

--- a/src/app/components/report-daily2/report-daily2.component.html
+++ b/src/app/components/report-daily2/report-daily2.component.html
@@ -12,9 +12,9 @@
 
 <hr width="90%"> -->
 
-<ion-grid style="width: 90%" no-padding>
-  <ion-row no-padding align-items-center>
-    <ion-col size="2" no-padding style="text-align: left">
+<ion-grid style="width: 90%" class="ion-no-padding">
+  <ion-row class="ion-no-padding" align-items-center>
+    <ion-col size="2" class="ion-no-padding" style="text-align: left">
       <ion-icon name="card" style="font-size: 50px; vertical-align: middle" color="hk-red"></ion-icon>
     </ion-col>
     <ion-col size="10" style="text-align: left; font-size: 16px">
