--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <div class="bg-img" padding></div>
+  <div class="bg-img ion-padding"></div>
   <form registerForm="ngForm">
     <ion-card mode="ios">
       <!-- <ion-row class="ion-align-items-center">
