--- a/src/app/pages/new-activity/new-activity.page.html
+++ b/src/app/pages/new-activity/new-activity.page.html
@@ -22,7 +22,7 @@
       <div *ngIf="isArrived">
         <ion-item Lines="full">
           <ion-input type="text" placeholder="Suhu badan hari ini" [(ngModel)]="txtTemperature" name="txtTemperature"
-            type="number" required no-padding>
+            type="number" required class="ion-no-padding">
           </ion-input>
           <ion-label position="end">Celcius</ion-label>
         </ion-item>
@@ -195,7 +195,7 @@
       <ion-icon name="megaphone" slot="start"></ion-icon>
       <ion-text>AKHLAK BUMN</ion-text>
     </ion-item>
-    <div padding>
+    <div class="ion-padding">
       <ion-text>1. Amanah</ion-text> <br>
       <ion-text><span style="margin-left: 20px">Memegang teguh kepercayaan yang diberikan</span></ion-text> <br>
       <ion-text>2. Kompeten</ion-text> <br>
