--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -54,8 +54,8 @@
   </ion-item>
 
   <hr style="height: 12px; background-color: var(--ion-color-hk-tweet); margin-top: 0px; margin-bottom: 0px;"
-    no-padding>
-  <hr style="height: 0.5px; background-color: #cecece; margin-top: 0px; margin-bottom: 0px;" no-padding>
+    class="ion-no-padding">
+  <hr style="height: 0.5px; background-color: #cecece; margin-top: 0px; margin-bottom: 0px;" class="ion-no-padding">
 
   <ion-item button (click)="Logout()" Lines="full">
     <ion-label class="ion-text-center" color="hk-red">Log out</ion-label>
