--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -3,7 +3,7 @@
   <ion-slides fullscreen pager="true" [options]="slideOpts">
     <ion-slide>
       <ion-row>
-        <div class="text" padding>
+        <div class="text ion-padding">
           <h2>HK ABSEN</h2>
           <p>Hutama Karya Attendance System <br> for HK and Subsdiaries</p>
         </div>
@@ -12,7 +12,7 @@
 
     <ion-slide>
       <ion-row>
-        <div class="text" padding>
+        <div class="text ion-padding">
           <h2>Gamification</h2>
           <p>Jadilah top 10 karyawan yang melakukan absensi paling awal dan dapatkan hadiahnya </p>
         </div>
@@ -21,7 +21,7 @@
 
     <ion-slide>
       <ion-row>
-        <div class="text" padding>
+        <div class="text ion-padding">
           <h2>Integrated</h2>
           <p>Absen dengan device apa saja, karena sistem telah terintegrasi dengan CCTV, Kiosk dan SAP HITS kamu loh</p>
         </div>
@@ -30,7 +30,7 @@
 
     <ion-slide>
       <ion-row>
-        <div class="text" padding>
+        <div class="text ion-padding">
           <h2>Let's Start</h2>
           <p>Yuk, mulai bekerja pada waktunya!</p>
 
