--- a/src/app/pages/work-permit/work-permit.page.html
+++ b/src/app/pages/work-permit/work-permit.page.html
@@ -22,7 +22,7 @@
   </ion-searchbar> -->
 </ion-content>
 
-<ion-footer no-border>
+<ion-footer class="ion-no-border">
   <ion-card color="hk-red" class="ion-text-center">
     <ion-item button detail color="hk-red" (click)="OpenHits()">Go to Application HITS</ion-item>
   </ion-card>
