--- a/src/app/components/form-absen-proyek/form-absen-proyek.component.html
+++ b/src/app/components/form-absen-proyek/form-absen-proyek.component.html
@@ -206,7 +206,7 @@
     <ion-icon name="megaphone" slot="start"></ion-icon>
     <ion-text>AKHLAK BUMN</ion-text>
   </ion-item>
-  <div padding>
+  <div class="ion-padding">
     <ion-text>1. Amanah</ion-text> <br>
     <ion-text><span style="margin-left: 20px">Memegang teguh kepercayaan yang diberikan</span></ion-text> <br>
     <ion-text>2. Kompeten</ion-text> <br>
