--- a/src/app/components/form-all-option/form-all-option.component.html
+++ b/src/app/components/form-all-option/form-all-option.component.html
@@ -35,7 +35,7 @@
 
       <ion-item Lines="full">
         <ion-input type="text" placeholder="Suhu badan hari ini" [(ngModel)]="txtTemperature" name="txtTemperature"
-          type="number" required no-padding>
+          type="number" required class="ion-no-padding">
         </ion-input>
         <ion-label position="end">Celcius</ion-label>
       </ion-item>
@@ -207,7 +207,7 @@
     <ion-icon name="megaphone" slot="start"></ion-icon>
     <ion-text>AKHLAK BUMN</ion-text>
   </ion-item>
-  <div padding>
+  <div class="ion-padding">
     <ion-text>1. Amanah</ion-text> <br>
     <ion-text><span style="margin-left: 20px">Memegang teguh kepercayaan yang diberikan</span></ion-text> <br>
     <ion-text>2. Kompeten</ion-text> <br>
