--- a/src/app/components/password/password.component.html
+++ b/src/app/components/password/password.component.html
@@ -24,8 +24,8 @@
   </ion-item>
 
   <hr style="height: 12px; background-color: var(--ion-color-hk-tweet); margin-top: 0px; margin-bottom: 0px;"
-    no-padding>
-  <hr style="height: 0.5px; background-color: #cecece; margin-top: 0px; margin-bottom: 0px;" no-padding>
+    class="ion-no-padding">
+  <hr style="height: 0.5px; background-color: #cecece; margin-top: 0px; margin-bottom: 0px;" class="ion-no-padding">
 
   <ion-item Lines="inset">
     <ion-label>New password</ion-label>
