--- a/src/app/components/popover/popover.component.html
+++ b/src/app/components/popover/popover.component.html
@@ -2,14 +2,14 @@
   <img src="../../../assets/images/bg-3.png" alt="bg-3">
 </ion-content>
 
-<ion-grid no-padding>
-  <ion-row no-padding>
-    <ion-col no-padding>
+<ion-grid class="ion-no-padding">
+  <ion-row class="ion-no-padding">
+    <ion-col class="ion-no-padding">
       <div class="ion-text-start">
         <ion-button shape="round" expand="block" color="hk-grey">Cancel</ion-button>
       </div>
     </ion-col>
-    <ion-col no-padding>
+    <ion-col class="ion-no-padding">
       <div class="ion-text-end">
         <ion-button shape="round" expand="block" color="hk-grey">OK</ion-button>
       </div>
