--- a/src/app/pages/my-activity/my-activity.page.html
+++ b/src/app/pages/my-activity/my-activity.page.html
@@ -28,12 +28,12 @@
           <p>{{ txtDivisionName }}</p>
         </ion-label>
       </ion-item>
-      <div class="ion-text-start" padding style="padding-top: 0px; padding-bottom: 0px; line-height: 150%;">
+      <div class="ion-text-start ion-padding" style="padding-top: 0px; padding-bottom: 0px; line-height: 150%;">
         <ion-text color="dark">{{ txtWork }}</ion-text>
         <ion-text> - </ion-text>
         <ion-text>{{ txtLocation }}</ion-text> <br>
-        <ion-row no-padding>
-          <ion-col size="6" no-padding>
+        <ion-row class="ion-no-padding">
+          <ion-col size="6" class="ion-no-padding">
             <div class="ion-text-nowrap" style="overflow: hidden; text-overflow: ellipsis;">
               <ion-text *ngIf="txtWork == 'WFO'">Suhu</ion-text>
               <ion-text *ngIf="txtWork == 'WFH'">Health Check</ion-text>
@@ -51,7 +51,7 @@
               <ion-text>Jenis Olahraga</ion-text> <br>
             </div>
           </ion-col>
-          <ion-col size="6" no-padding>
+          <ion-col size="6" class="ion-no-padding">
             <div class="ion-text-nowrap" style="overflow: hidden; text-overflow: ellipsis;">
               <ion-text *ngIf="txtWork == 'WFO'">: {{ txtSuhu }}</ion-text>
               <ion-text *ngIf="txtWork == 'WFH'">: {{ txtHealthCheck }}</ion-text>
@@ -77,7 +77,7 @@
     </ion-card>
   </div>
 
-  <div class="ion-text-center" *ngIf="isNoActivity" padding>
+  <div class="ion-text-center ion-padding" *ngIf="isNoActivity">
     <img src="../../../assets/images/img-14.png">
 
     <ion-text style="font-weight: 700;">
@@ -89,7 +89,7 @@
     </ion-text>
   </div>
 
-  <div class="ion-text-center" *ngIf="isNoReport" padding>
+  <div class="ion-text-center ion-padding" *ngIf="isNoReport">
     <img src="../../../assets/images/img-14.png">
 
     <ion-text style="font-weight: 700;">
@@ -102,7 +102,7 @@
   </div>
 </ion-content>
 
-<ion-footer *ngIf="isNoActivity || isNoReport" no-shadow no-border padding>
+<ion-footer *ngIf="isNoActivity || isNoReport" no-shadow no-border class="ion-padding">
   <ion-button *ngIf="isNoActivity" color="hk-red" expand="full" (click)="AddActivity()">Isi Form Activity</ion-button>
   <ion-button *ngIf="isNoReport" color="hk-red" expand="full" (click)="DoingAbsen()">Absen Sekarang</ion-button>
 </ion-footer>
