--- a/src/app/pages/warning-locations/warning-locations.page.html
+++ b/src/app/pages/warning-locations/warning-locations.page.html
@@ -1,4 +1,4 @@
-<ion-content padding>
+<ion-content class="ion-padding">
   <h1 style="line-height: 0px; font-weight: 700;">Location access</h1>
   <h1 style="font-weight: 700;">needed</h1>
 
@@ -9,6 +9,6 @@
   <img src="../../../assets/images/img-9.png">
 </ion-content>
 
-<ion-footer no-shadow no-border padding>
+<ion-footer class="ion-padding ion-no-border ion-no-shadow">
   <ion-button color="hk-red" expand="full" (click)="OpenSettings()">Allow Location Access</ion-button>
 </ion-footer>
