--- a/src/app/pages/warning-updates/warning-updates.page.html
+++ b/src/app/pages/warning-updates/warning-updates.page.html
@@ -1,4 +1,4 @@
-<ion-content padding>
+<ion-content class="ion-padding">
   <h1 style="line-height: 0px; font-weight: 700;">Application update</h1>
   <h1 style="font-weight: 700;">needed</h1>
 
@@ -12,6 +12,6 @@
   </ion-text>
 </ion-content>
 
-<ion-footer no-shadow no-border padding>
+<ion-footer class="ion-padding ion-no-border ion-no-shadow">
   <ion-button color="hk-red" expand="full" (click)="UpdateApps()">Update</ion-button>
 </ion-footer>
