- fix ion-datetime pada form-absen-diluar.component.html - fix ion-datetime pada form-absen-proyek.component.html - fix ion-datetime pada form-all-option.component.html - fix ion-datetime pada form-wfo-new-normal.component.html - fix ion-datetime pada new-activity.page.html - HOMEPAGE => snap header (leaderboard)

--- a/src/app/components/form-absen-proyek/form-absen-proyek.component.html
+++ b/src/app/components/form-absen-proyek/form-absen-proyek.component.html
@@ -148,7 +148,13 @@
     <div *ngIf="isArrived">
       <ion-item Lines="full">
         <ion-label>Kapan Anda Terakhir Olahraga</ion-label>
-        <ion-datetime [(ngModel)]="waktuOlahraga" displayFormat="YYYY MM DD" placeholder="Select Date"></ion-datetime>
+        <ion-datetime-button datetime="datetime"></ion-datetime-button>
+
+        <ion-modal [keepContentsMounted]="true">
+          <ng-template>
+            <ion-datetime [(ngModel)]="waktuOlahraga" presentation="date" id="datetime"></ion-datetime>
+          </ng-template>
+        </ion-modal>
       </ion-item>
   
       <ion-item>
