--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,17 +1,64 @@
-.backgroundFull {
-  --background: none;
-  background-image: url("../../assets/images/img-1.png");
-  background-position: center top;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+ion-content {
+  --background: #f0f0f0;
+}
+
+ion-card {
+  --background: #ffffff;
+  box-shadow: none;
+}
+
+.ios ion-card {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .content {
-  --background: none;
-  background-image: url("../../assets/images/bg-8.png");
-  background-position: center top;
-  background-repeat: no-repeat;
-  background-size: 100%;
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+
+  .headSnap {
+    --background: none;
+    background-image: url("../../assets/images/bg-8.png");
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: 100%;
+
+    .leaderboard{
+      position: relative;
+
+      .left-item-leaderboard {
+        position: absolute;
+        bottom: 0%;
+        font-weight: bold;
+      }
+  
+      .right-item-leaderboard {
+        position: absolute;
+        top: 0%;
+        right: 0%;
+        width: 100%;
+      }
+    }
+  }
+
+  .flexContainer {
+    overflow: auto;
+    flex-grow: 1 !important;
+    // background-color: #ffffff;
+
+    .container {
+      padding-top: 0px;
+      padding-bottom: 0px;
+      white-space: nowrap;
+      ::-webkit-scrollbar {
+        display: none;
+      }
+      .scroll {
+        overflow: auto;
+      }
+    }
+  }
 }
 
 .footer-content {
@@ -29,108 +76,5 @@
 
   .ion-float-left {
     font-size: 14px;
-  }
-
-  .active-item {
-    border-left: 8px solid var(--ion-color-hk-red);
-  }
-
-  // ion-button {
-  //   min-height: 50px;
-  // }
-
-  // .ontime {
-  //   font-size: 10px;
-  //   height: 18px;
-  //   background: var(--ion-color-hk-green);
-  // }
-
-  // .terlambat {
-  //   font-size: 10px;
-  //   height: 18px;
-  //   background: var(--ion-color-hk-red);
-  // }
-
-  // .diluarkantor {
-  //   font-size: 10px;
-  //   height: 18px;
-  //   background: var(--ion-color-hk-yellow);
-  // }
-}
-
-ion-content {
-  --background: #f0f0f0;
-
-  .workStatus {
-    font-size: 14px;
-    color: var(--ion-color-hk-green);
-  }
-
-  .ion-justify-content-center {
-    // background: #a85858;
-    background-image: url("../../assets/images/bg-7.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-
-    // grid-auto-rows: 330%;
-    height: 100%;
-  }
-
-  ion-card {
-    --background: #ffffff;
-    box-shadow: none;
-    border-radius: 20px;
-  }
-}
-
-ion-card {
-  --background: #ffffff;
-  box-shadow: none;
-}
-
-.ios ion-card {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-// ion-card {
-//   position: relative;
-//   text-align: center;
-// }
-
-.card-title {
-  position: absolute;
-  bottom: 0%;
-  // font-size: 2.0em;
-  width: 100%;
-  font-weight: bold;
-  color: #000000;
-}
-
-.card-subtitle {
-  font-size: 1.0em;
-  position: absolute;
-  top: 0%;
-  // right: 50%;
-  // left: 70%;
-  width: 100%;
-  font-weight: bold;
-  color: #000000;
-}
-
-.container {
-  // display: inline;
-  // width: 80%;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  // background-color: green;
-  overflow: hidden;
-  white-space: nowrap;
-  ::-webkit-scrollbar {
-    display: none;
-  }
-  .scroll {
-    overflow: auto;
   }
 }
