--- a/src/app/pages/new-activity/new-activity.page.html
+++ b/src/app/pages/new-activity/new-activity.page.html
@@ -136,8 +136,14 @@
 
         <ion-item Lines="full">
           <ion-label>Kapan Anda Terakhir Olahraga</ion-label>
-          <ion-datetime [(ngModel)]="waktuOlahraga" displayFormat="YYYY MM DD" placeholder="Select Date"></ion-datetime>
-        </ion-item>
+          <ion-datetime-button datetime="datetime"></ion-datetime-button>
+
+          <ion-modal [keepContentsMounted]="true">
+            <ng-template>
+              <ion-datetime [(ngModel)]="waktuOlahraga" presentation="date" id="datetime"></ion-datetime>
+            </ng-template>
+          </ion-modal>
+          </ion-item>
 
         <ion-item>
           <ion-label>Jenis Olahraga yang Dilakukan</ion-label>
