--- a/src/app/pages/attendance/attendance.page.scss
+++ b/src/app/pages/attendance/attendance.page.scss
@@ -36,3 +36,30 @@ hr {
 // .ios ion-card {
 //   margin-bottom: -8px;
 // }
+
+ion-segment {
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+ion-segment-button {
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  // --indicator-color: red;
+  // --color-checked: pink;
+  // --color-hover: yellow;
+  // --indicator-height: 3px;
+
+  --indicator-box-shadow: transparent !important;
+  --border-radius: 2rem !important;
+  // padding: 0 0.2em;
+  // margin: 0.5em;
+  --background: white;
+  --color: #33691e;
+  --background-checked: linear-gradient(to right, #5a9216, #8bc34a) !important;
+  --color-checked: white;
+  --indicator-color: transparent !important;
+}
