--- a/src/app/pages/work-permit/work-permit.page.html
+++ b/src/app/pages/work-permit/work-permit.page.html
@@ -4,26 +4,21 @@
       <ion-back-button color="hk-white-red"></ion-back-button>
     </ion-buttons>
     <ion-title #label>Time Sheet</ion-title>
-    <!-- style="visibility: hidden;" -->
   </ion-toolbar>
 </ion-header>
 
+<ion-content>
+</ion-content>
 
-<ion-content scrollEvents="true" class="content">
+<!-- <ion-content scrollEvents="true" class="content">
   <img (click)="ShowImage('www/assets/images/workPermit-1.jpeg', 'Memperbarui Time Sheet')"
     src="../../../assets/images/workPermit-1.jpeg">
   <img (click)="ShowImage('www/assets/images/workPermit-2.jpeg', 'Memperbarui Time Sheet')"
     src="../../../assets/images/workPermit-2.jpeg">
-  <!-- appCustomHeader [header]="header" [label]="label" -->
-  <!-- <ion-label padding color="hk-white-red" style="font-size: 34px; font-weight: bold;">Notifications</ion-label> -->
-
-  <!-- <ion-searchbar showCancelButton="focus" placeholder="Search" color="light" style="width: 90%; margin: 0 auto;"
-    mode="ios">
-  </ion-searchbar> -->
 </ion-content>
 
 <ion-footer class="ion-no-border">
   <ion-card color="hk-red" class="ion-text-center">
     <ion-item button detail color="hk-red" (click)="OpenHits()">Go to Application HITS</ion-item>
   </ion-card>
-</ion-footer>
+</ion-footer> -->
