--- a/src/app/pages/work-permit/work-permit.page.scss
+++ b/src/app/pages/work-permit/work-permit.page.scss
@@ -5,3 +5,7 @@
 //     background-repeat: no-repeat;
 //     background-size: 100%;
 //   }
+
+ion-content {
+    --background: #fff url("../../../assets/images/img-17.png") no-repeat top center / cover;
+  }
