--- a/src/app/pages/attendance/attendance.page.scss
+++ b/src/app/pages/attendance/attendance.page.scss
@@ -1,65 +1,69 @@
-.content {
-  // --background: none;
-  // background-image: url("../../../assets/images/bg-5.png");
-  background-position: center top;
-  background-repeat: no-repeat;
-  background-size: 100%;
-}
-
-.container {
-  // display: inline;
-  // width: 80%;
-  padding-left: 5%;
-  padding-right: 5%;
-  // background-color: green;
-  overflow: hidden;
-  white-space: nowrap;
-  ::-webkit-scrollbar {
-    display: none;
-  }
-  .scroll {
-    overflow: auto;
-  }
-}
-
-hr {
-  height: 0.75px;
-  background-color: #cecece;
-}
-
-// ion-card {
-//   --background: #f0f0f0;
-//   box-shadow: none;
-//   border-radius: 20px;
+// .content {
+//   // --background: none;
+//   // background-image: url("../../../assets/images/bg-5.png");
+//   background-position: center top;
+//   background-repeat: no-repeat;
+//   background-size: 100%;
 // }
 
-// .ios ion-card {
-//   margin-bottom: -8px;
+// .container {
+//   // display: inline;
+//   // width: 80%;
+//   padding-left: 5%;
+//   padding-right: 5%;
+//   // background-color: green;
+//   overflow: hidden;
+//   white-space: nowrap;
+//   ::-webkit-scrollbar {
+//     display: none;
+//   }
+//   .scroll {
+//     overflow: auto;
+//   }
 // }
 
-ion-segment {
-  ::-webkit-scrollbar {
-    display: none;
-  }
-}
+// hr {
+//   height: 0.75px;
+//   background-color: #cecece;
+// }
 
-ion-segment-button {
-  ::-webkit-scrollbar {
-    display: none;
-  }
+// // ion-card {
+// //   --background: #f0f0f0;
+// //   box-shadow: none;
+// //   border-radius: 20px;
+// // }
 
-  // --indicator-color: red;
-  // --color-checked: pink;
-  // --color-hover: yellow;
-  // --indicator-height: 3px;
+// // .ios ion-card {
+// //   margin-bottom: -8px;
+// // }
 
-  --indicator-box-shadow: transparent !important;
-  --border-radius: 2rem !important;
-  // padding: 0 0.2em;
-  // margin: 0.5em;
-  --background: white;
-  --color: #33691e;
-  --background-checked: linear-gradient(to right, #5a9216, #8bc34a) !important;
-  --color-checked: white;
-  --indicator-color: transparent !important;
+// ion-segment {
+//   ::-webkit-scrollbar {
+//     display: none;
+//   }
+// }
+
+// ion-segment-button {
+//   ::-webkit-scrollbar {
+//     display: none;
+//   }
+
+//   // --indicator-color: red;
+//   // --color-checked: pink;
+//   // --color-hover: yellow;
+//   // --indicator-height: 3px;
+
+//   --indicator-box-shadow: transparent !important;
+//   --border-radius: 2rem !important;
+//   // padding: 0 0.2em;
+//   // margin: 0.5em;
+//   --background: white;
+//   --color: #33691e;
+//   --background-checked: linear-gradient(to right, #5a9216, #8bc34a) !important;
+//   --color-checked: white;
+//   --indicator-color: transparent !important;
+// }
+
+ion-content {
+  --background: #fff url("../../../assets/images/img-17.png") no-repeat top center / cover;
 }
