- Update final 2.0.2 - Show Notification Good Bye

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -189,6 +189,29 @@
 }
 
 ion-alert {
+  &.alert-welcome {
+    --min-width: 90vw; // calc(100% - 20px);
+    --border-spacing: 10px; // DELETE LATER
+    --letter-spacing: 10px; // DELETE LATER
+    --word-spacing: 10px; // DELETE LATER
+
+    .alert-head {
+      min-height: 78.644vw;
+      background-image: url("../assets/images/img-last.png");
+      background-size: 100% 100%;
+      color: #fff;
+    }
+
+    .alert-message {
+      height: 0px;
+      padding: 0px;
+    }
+
+    .alert-button {
+      min-height: 50px;
+      color: var(--ion-color-hk-red);
+    }
+  }
   &.alert-ontime {
     --min-width: 90vw; // calc(100% - 20px);
     --border-spacing: 10px; // DELETE LATER
